Update HostCommandExecutor.java